--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 memories we've created together. Here's to many more beautiful moments!
             </p>
             <p>Wishing you all the happiness in the world.</p>
-            <p>With love, [Your Name]</p>
+            <p>With love, Selma </p>
         </section>
     </main>
     <script src="script.js"></script>
