--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
         <section class="message">
             <p>Hamouda</p>
             <p>
-                Happy Birthday! You are an amazing friend, and I cherish all the 
-                memories we've created together. Here's to many more beautiful moments!
+                Happy birthday hamouda 
+                On your special day, we want you to know just how much you mean to all of us. You’re not just an amazing friend, a caring brother, and a loving boyfriend you’re a source of light and strength in our lives. We are beyond lucky and grateful to have you. 
+                We love you more than words could express and your little sister promise to always stand by your side through every life brings
+
             </p>
-            <p>Wishing you all the happiness in the world.</p>
-            <p>With love, Selma </p>
+            <p> With all our love and heartfelt wishes,</p>
+            <p>Your second family❤️ </p>
         </section>
     </main>
     <script src="script.js"></script>
