--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
             <img src="patron/7.png" alt="Photo 7">
             <img src="patron/8.png" alt="Photo 8">
             <img src="patron/9.png" alt="Photo 9">
-            <img src="patron/10.png" alt="Photo 9">
+            <img src="patron/10.png" alt="Photo 10">
+            <img src="patron/11.png" alt="Photo 11">
+            <img src="patron/12.jpeg" alt="Photo12">
+            <img src="patron/13.jpeg" alt="Photo13">
+            <img src="patron/14.jpeg" alt="Photo14">
+            <img src="patron/15.jpeg" alt="Photo15">
         
             <!-- Add more images as needed -->
         </section>
